# datalab-digital-heritage-nexus

./: README.md  escape_room.html  events.json  image-game.html  image-game.js  immersive_layer.html  immersive_layer.js  index.html  map.js  maps.html  script.js  style.css  sustainability.html  sustainability.js  timeline.html  timeline.js
assets/models/: venice.glb
crewAI/: README.md  pyproject.toml
crewAI/src/coul_you_pleas_clarif_if_thi_cha_titl_shoul_focu_on_a_cre_automatio_use_cas/: crew.py  main.py
crewAI/src/coul_you_pleas_clarif_if_thi_cha_titl_shoul_focu_on_a_cre_automatio_use_cas/config/: agents.yaml  tasks.yaml
data/: heritage.json
flowiseAI/: Salento-city-verse Agents.json
